--- a/the-golden-lotus/031.md
+++ b/the-golden-lotus/031.md
@@ -1,43 +1,12 @@
 第三十一回：琴童藏壶觑玉箫 西门庆开宴吃喜酒（万历本）
-=
+========================================================
 
-「家富自然身贵， 逢人必让居先，
+    「家富自然身贵， 逢人必让居先，
+    贫寒敢仰上官怜， 彼此都看钱面；
+    婚嫁专寻势要， 通财邀结豪英，
+    不知兴废在心田， 只靠眼前知见。」
 
-贫寒敢仰上官怜， 彼此都看钱面；
-
-婚嫁专寻势要， 通财邀结豪英，
-
-不知兴废在心田， 只靠眼前知见。」
-
-话说西门庆，次日使来保提邢所，本县下文书，一面使人做官帽。又唤赵裁率领四五个裁缝，在家来
-
-裁剪尺头，攒造衣服。又叫了许多匠人，钉了七八条都是四尺宽玲珑云母犀角鹤顶红玳瑁鱼骨香带。
-
-不说西门庆家中热乱。且说吴典恩那日走到应伯爵家，把做驿丞之事，再三央及伯爵，要问西门庆借
-
-银子上下使用。许伯爵：「借银子出来，把十两银子买礼物谢老兄。」说着跪在地下。慌的伯爵一手
-
-拉起，说道：「此是成人之美。大官人照顾你东京走了这遭，携带你得此前程，也不是寻常小可。」
-
-因问：「你如今所用多少勾了？」吴典恩道：「不瞒老兄说，我家活人家，一文钱也没有。到明日上
-
-任参官贽见之礼，连摆酒并治衣类鞍马，少说也得七八十两银子，那里区处？如今我写了一布文书在
-
-此，也没敢下数儿。望老兄好歹扶持小人，在旁加美言。事成恩有重报，不敢有忘。」伯爵看了文书
-
-，因令：「吴二哥，你说借出这七八十两银子来，也不勾使。依我取笔来写上一百两恒是看我面不要
-
-你利钱。你且得手使了，到明日做上官儿，慢慢陆续还他，也是不迟。常言俗语说得好，借米下得锅
-
-，讨米下不的锅。哄了一日是两晌。何况你又在他家曾做过买卖，他那里把你这几两银子放在心上？
-
-」那吴典恩听了，谢了又谢。于是把文书上，填写了一百两之数。当下两个吃了茶，一同起身，来到
-
-西门庆门首。伯爵问守门平安儿：「你爹起来了不曾？」平安儿道：「俺爹起来了，在卷棚看着匠人
-
-钉带哩。待小的禀去。」于是一直走来报西门庆说：「应二爹和吴二叔来了。」西门庆道：「请进。
-
-」不一时，二人进入里面，见有许多裁缝匠人，七手八脚做生活。西门庆带着小帽锦衣和陈敬济在穿
+话说西门庆，次日使来保提邢所，本县下文书，一面使人做官帽。又唤赵裁率领四五个裁缝，在家来裁剪尺头，攒造衣服。又叫了许多匠人，钉了七八条都是四尺宽玲珑云母犀角鹤顶红玳瑁鱼骨香带。不说西门庆家中热乱。且说吴典恩那日走到应伯爵家，把做驿丞之事，再三央及伯爵，要问西门庆借银子上下使用。许伯爵：「借银子出来，把十两银子买礼物谢老兄。」说着跪在地下。慌的伯爵一手拉起，说道：「此是成人之美。大官人照顾你东京走了这遭，携带你得此前程，也不是寻常小可。」因问：「你如今所用多少勾了？」吴典恩道：「不瞒老兄说，我家活人家，一文钱也没有。到明日上任参官贽见之礼，连摆酒并治衣类鞍马，少说也得七八十两银子，那里区处？如今我写了一布文书在此，也没敢下数儿。望老兄好歹扶持小人，在旁加美言。事成恩有重报，不敢有忘。」伯爵看了文书，因令：「吴二哥，你说借出这七八十两银子来，也不勾使。依我取笔来写上一百两恒是看我面不要你利钱。你且得手使了，到明日做上官儿，慢慢陆续还他，也是不迟。常言俗语说得好，借米下得锅，讨米下不的锅。哄了一日是两晌。何况你又在他家曾做过买卖，他那里把你这几两银子放在心上？」那吴典恩听了，谢了又谢。于是把文书上，填写了一百两之数。当下两个吃了茶，一同起身，来到西门庆门首。伯爵问守门平安儿：「你爹起来了不曾？」平安儿道：「俺爹起来了，在卷棚看着匠人钉带哩。待小的禀去。」于是一直走来报西门庆说：「应二爹和吴二叔来了。」西门庆道：「请进。」不一时，二人进入里面，见有许多裁缝匠人，七手八脚做生活。西门庆带着小帽锦衣和陈敬济在穿
 
 廊下，看着写见官手本揭帖。见二人，作揖让坐。伯爵问：「哥的手本札付，下了不曾？」西门庆道
 
@@ -435,6 +404,6 @@
 
 ，前遮后拥，唱道而去。正是：
 
-「得多少欢娱嫌日短， 故烧高烛照红妆。」
+    「得多少欢娱嫌日短， 故烧高烛照红妆。」
 
 毕竟后项未知如何，且听下回分解：
