--- a/the-golden-lotus/054.md
+++ b/the-golden-lotus/054.md
@@ -19,7 +19,7 @@
 
 唱毕，又移酒到水池边，铺下毡单，都坐地了。传杯弄盏，猜拳赛色，吃得恁地热闹。西门庆道：「董娇儿那个小淫妇，怎地不来？」应伯爵道：「昨日我自去约他，他说要送一个汉子出门，约午前来的。想必此时晓得我们在这里顽耍，他一定赶来也。」白来创道：「这都是二哥的过，怎的不约实了他来？」西门庆就向白来创耳边说道：「我们与那花子赌了。只说过了日中，董娇儿不来，各罚主人三大碗。」白来创对应伯爵说了。伯爵道：「便罢。只是日中以前来了，要罚列位三大碗一个。」赌便一时赌了，董娇儿那得见来？伯爵慌得只管笑。白来创与谢希大、西门庆、两个妓女，这般这般，都定了计。西门庆假意净手起来。分付玳安交他假意嚷将进来，只说董姑娘在外来了，如此如此。玳安晓得了。停了一会时，伯爵正在迟疑，只见玳安慌不迭的奔将来道：「董家姐姐来了！不知那里寻的来？」那伯爵嚷道：「乐杀我老太婆也！我说就来的。快把酒来，各请三碗一个。」西门庆道：「若是我们嬴了，要你吃你怎的就肯吃？」伯爵道：「我若输了，不肯吃，不是人了！」众人道：「是便是了。你且去叫他进来，我们纔好吃。」伯爵道：「是了。好人口里的言语呢！」一走出去，东西南北都看得眼花了，那得董娇儿的魂灵？望空骂道：「贼淫妇，在二爷面上这般的拔短梯，乔作衙哩！」走进去，众人都笑得了不的。拥住道：「如今日中过了，要吃还我们三碗一个。」伯爵道：「都是小油嘴哄我，你们倒做实了我的酒了。怎的摆布？」西门庆不由分说，满满捧一碗酒，对伯爵道：「方纔说的，不吃不是人了。」伯爵接在手，谢希大接连又斟一碗来了，吃也吃不完，吴典恩又接手斟一大碗酒来了，慌得那伯爵了不的，嚷道：「不好了，呕出来了。拏些小菜我过过，便好。」白来创倒取甜东西去。伯爵道：「贼短命，不把酸的，倒把甜的来混帐！」白来创笑道：「那一碗就是酸的来了。左右咸酸苦辣，都待尝到罢了。且没慌着！」伯爵道：「精油嘴，碜夸口得好！」常时节又送一碗来了，伯爵只待奔开暂避。西门庆和两个妓女拥住了，那里得去？伯爵叫道：「董娇儿贼短命小淫妇！害得老子好苦也！」众都笑做一堆。那白来创又交玳安拿酒壶，满满斟着。玳安把酒壶嘴支入碗内一寸许多，骨都都只管筛，那里肯住手。伯爵瞧着道：「痴客劝主人也罢。那贼小淫妇惯打閛閛的，怎的把壶子都放在碗内了！看你一千年，我二爷也不撺掇你讨老婆哩！」韩金钏、吴银儿各人斟了一碗送与应伯爵。应伯爵道：「我跪了杀鸡罢！」韩金钏道：「都免礼，只请酒便了。」吴银儿道：「怎的不向董家姐姐杀鸡，求他来了？」伯爵道：「休见笑了，也勾吃了。」两个一齐推酒到嘴，伯爵不好接一头，两手各接了一碗，就吃完了。连忙吃了些小菜，一时面都通红了。叫道：「我被你们弄了。酒便慢慢吃还好，怎的灌得闷不转的！」众人只待斟酒。伯爵跪着西门庆道：「还求大哥说个方便，饶恕小人穷性命，还要留他陪客。若一醉了，便不知天好日暗，一些兴子也没有了。」西门庆道：「便罢，这两碗一个，你且欠着，停征了罢。」伯爵就起来谢道：「一发蠲免了罢，足见大恩！」西门庆道：「也罢，就恕了你。只是方纔说，我们不吃，不是个人。如今你渐有些没人气了！」伯爵道：「我倒灌醉了。那淫妇不知那里歪斯缠去了！」
 
-吴银儿笑伯爵道：「咳，怎的大老官人在这里做东道顽耍，董娇姐也不来来？」伯爵假意道：「他是上台盘的名妓，倒是难请的。」韩金钏儿道：「他是赶势利去了。成甚的行货，叫他是名妓！」伯爵道：「我晓得你想必有些吃醋的宿帐哩！」西门庆认是蔡公子那夜的故事，把金钏一看，不在话下。那时伯爵已是醉醺醺的。两个妓女又不是耐静的，只管调唇弄舌，一句来，一句去，歪斯缠到吃得冷淡了。白来创对金钏道：「你两个唱个曲儿么？」吴银儿道：「也使得。」让金钏先唱。常时节道：「我胜那白阿弟的扇子，倒是板骨的，倒也好打板。」金钏道：「借来打一打板。」接去看看道：「我倒少这把打板的扇子。不作我赢的棋子，送与我罢。」西门庆道：「这倒好。」常时节吃众人撺掇不过，只得送与他了。金钏道：「吴银姐在这里，我怎的好独要。我与你猜色，那个色大的，拿了罢。」常时节道：「这却有理。」就猜一色，是吴银儿赢了。金钏就递与银儿了。常时节假冠冕道：「这怎么处？我还有一条汗巾，送与金钏姐，补了扇罢。」遂送过去。金钏接了道：「这却撒漫了。」西门庆道：「我可惜不曾带得好川扇儿来，也卖富卖富。」常时节道：「这是打我一下了。」那谢希大蓦地嚷起来道：「我几乎忘了！又是说起扇子来！」交玳安斟了一大杯酒，送与吴典恩道：「请完了旁赌的酒。」吴典恩道：「这罢了。停了几时纔想出来，他每的东西都花费了，那在一杯酒？」被谢希大逼勒不过，只得呷完了。那时金钏就唱一曲，名唤荼｛艹縻｝香：
+吴银儿笑伯爵道：「咳，怎的大老官人在这里做东道顽耍，董娇姐也不来来？」伯爵假意道：「他是上台盘的名妓，倒是难请的。」韩金钏儿道：「他是赶势利去了。成甚的行货，叫他是名妓！」伯爵道：「我晓得你想必有些吃醋的宿帐哩！」西门庆认是蔡公子那夜的故事，把金钏一看，不在话下。那时伯爵已是醉醺醺的。两个妓女又不是耐静的，只管调唇弄舌，一句来，一句去，歪斯缠到吃得冷淡了。白来创对金钏道：「你两个唱个曲儿么？」吴银儿道：「也使得。」让金钏先唱。常时节道：「我胜那白阿弟的扇子，倒是板骨的，倒也好打板。」金钏道：「借来打一打板。」接去看看道：「我倒少这把打板的扇子。不作我赢的棋子，送与我罢。」西门庆道：「这倒好。」常时节吃众人撺掇不过，只得送与他了。金钏道：「吴银姐在这里，我怎的好独要。我与你猜色，那个色大的，拿了罢。」常时节道：「这却有理。」就猜一色，是吴银儿赢了。金钏就递与银儿了。常时节假冠冕道：「这怎么处？我还有一条汗巾，送与金钏姐，补了扇罢。」遂送过去。金钏接了道：「这却撒漫了。」西门庆道：「我可惜不曾带得好川扇儿来，也卖富卖富。」常时节道：「这是打我一下了。」那谢希大蓦地嚷起来道：「我几乎忘了！又是说起扇子来！」交玳安斟了一大杯酒，送与吴典恩道：「请完了旁赌的酒。」吴典恩道：「这罢了。停了几时纔想出来，他每的东西都花费了，那在一杯酒？」被谢希大逼勒不过，只得呷完了。那时金钏就唱一曲，名唤荼靡香：
 
 「记得初相守，偶尔间因循成就，美满效绸缪。花朝月夜同宴赏，佳节须酬，到今日一旦休。常言道，好事天悭，美姻缘他娘间阻，生拆散鸾交凤友。 坐想行思，伤怀感旧，辜负了星前月下深深咒。愿不损，愁不煞，神天还佑，他有口不测相逢，话别离，情取一场消瘦。」
 
