--- a/the-golden-lotus/055.md
+++ b/the-golden-lotus/055.md
@@ -31,7 +31,7 @@
 
 正对着两个歌童眼儿，不觉的卖药有病的了，动人心处，扑簌簌流下两行泪来，说道：「哥，我们随着员外，指望一蒂儿到底。谁想酒席中间，一言两句，竟把我们送与别人。人离乡贱，未知去后若何？」那苗秀、苗实把好言知慰了一番，吃了饭，上马又走。四个生口，十六个蹄儿，端的是走的好。不多几个日头，就到东平洲清河县地面。四人拴了生口，下马访问端的，一直地竟到紫石街西门庆家府里投下。却说那西门庆，自从东京到家，每日忙不迭送礼的请酒的，日日三朋四友。既要与大娘儿接风，又要与各房儿缱绻，朝朝殢雨尤云。以此不曾到衙门里去走，连那告驾的帖儿，也不曾消的。那日清闲无事，且到衙门里升堂画卯，把那些解到的人犯，也有奸情的、斗欧的、赌赙的、窃盗的，一一重问一番。又把那些投到文书，一一押到日佥押了一会。乘了一乘凉轿，几个牢子喝道了，簇拥来家。只见那苗秀、苗实与那两个歌童已是候的久了，就跟着西门庆的轿子，随到前厅，双膝跪下禀说：「小的是杨州苗员外，有书拜候老爷。」磕个头起在一边。那西门庆举个手说着起来，就把苗员外别来的行径，寒暄的套语，问了一会。就叫书童把银剪子剪开护封，拆了内函封袋，打开副启，细细看时，只见那苗秀、苗实依先跪下，奉过那许多礼物说道：「这是俺员外一点孝心，求老爹俯纳。」西门庆喜之不胜，连忙叫玳安收起礼物，请起苗秀、苗实，说道：「我与千里相逢，不想就蒙员外情投意合，十分相爱，就把歌童相许，那时酒中说话，咱也忘却多时。因为那归的忙促，不曾叩府辞别。正在想着，不意一诺千金，远蒙员外记忆。我记得那古人交谊，止有那范张结契，千里相从，古今以为美谈。如今你们那个员外，委的也是难的！」称长道好，细细又感谢了一番。只见那两个歌童通新走过。又磕几个头，说道：「员外着小的们伏侍老爷，万求老爷青目。」西门庆见两个儿生得清秀，真真袅袅媚媚。虽不是两节穿衣的妇人，却胜似那唇红齿白的妮子。欢天喜地，就请四位管家前厅茶饭。一面整办厚礼，绫罗细软，修书答谢员外。一面收拾房间，就叫两个歌童，在于书房伺候着。只见那应伯爵诸人，闻此事知此事，通来探望。西门庆就叫玳安里边讨出菜蔬、嗄饭、点心、小酒，摆着八仙卓儿，就与诸人燕饮，就叫两个歌童前来唱，只见捧着擅板，拽起歌，唱一个：
 
-〔新水令〕 「小园昨夜放江梅，另一番动人风味。梨花迎笑脸，杨柳妒腰围。试问荼｛艹縻｝开到海棠未？」
+〔新水令〕 「小园昨夜放江梅，另一番动人风味。梨花迎笑脸，杨柳妒腰围。试问荼靡开到海棠未？」
 
 〔驻马听〕 「野径疎篱，阵阵香风来燕子；小园幽砌，纷纷晴雨过林西。芳心不与蝶潜知，暗香未许蜂先觉。阑遍倚，不知多少伤心处？」
 
