--- a/the-golden-lotus/060.md
+++ b/the-golden-lotus/060.md
@@ -29,7 +29,7 @@
 
 郑春唱了个：「请酒！」伯爵刚纔饮讫，那玳安在旁连忙又斟上一杯酒，郑春又唱道：
 
-「转过雕阑正见他，斜倚定荼｛艹縻｝架。佯羞整凤钗，不说昨宵话。笑吟吟，捏将花片儿打。」
+「转过雕阑正见他，斜倚定荼靡架。佯羞整凤钗，不说昨宵话。笑吟吟，捏将花片儿打。」
 
 伯爵吃过，连忙推与谢希大，说道：「罢，我是成不的，成不的！这两大锺把我就打发的了。」谢希大道：「俊化子，你吃不的，推于我来？我是你家有〈毛皮〉的蛮子？」伯爵道：「俊花子，我明日就做了堂上官儿，少不的是你替。」西门庆道：「你这狗材，到明日只好做个韶武。」伯爵笑道：「俊孩儿，我做了韶武，把堂上让与你就是了。」西门庆笑令玳安儿：「拏磕瓜来打这贼花子。」那谢希大悄悄向他头上打了一个响瓜儿，说道：「你这花子，温老先生在这里，你口里只恁胡说。」伯爵道：「温老先儿他斯文人，不管这闲事。」温秀才道：「二公与我这东君老先生，原来这等厚。酒席中间，诚然不如此，也不乐。悦在心，乐主发散在外。自不觉手之舞之，足之蹈之如此。」座上沈姨夫向西门庆说：「姨夫，不是这等。请大舅上席还行个令儿，或掷骰，或猜枚，或看牌，不拘诗词歌赋，顶真续麻急口令，说不过来，吃酒。这个庶几均匀，彼此不乱。」西门庆道：「姨夫说的是。」先斟了一杯，与吴大舅起令。吴大舅拏起骰盆儿来，说道：「列位，我行一令，说差了，罚酒一杯。先用一骰，后用两骰，遇点饮酒。」
 
