--- a/the-golden-lotus/078.md
+++ b/the-golden-lotus/078.md
@@ -1,19 +1,16 @@
 第七十八回：西门庆两战林太太 吴月娘翫灯请蓝氏（万历本）
-=
+==========================================================
 
-「黄钟应律好风催， 阴伏阳生淑岁回，
-
-葵影便移长至日， 梅花先趁大寒开；
-
-八神表日占和岁， 六管吹葭动细灰，
-
-已有岸傍迎腊柳， 参差又欲领春来。」
+    「黄钟应律好风催， 阴伏阳生淑岁回，
+    葵影便移长至日， 梅花先趁大寒开；
+    八神表日占和岁， 六管吹葭动细灰，
+    已有岸傍迎腊柳， 参差又欲领春来。」
 
 话说当日西门庆陪大舅饮酒，到晚回家。到次日，荆都监早辰骑马来拜谢，说道：「昨日见旨意下来，下官不胜欣喜。足见老翁爱厚费心之至，实为衔结难忘！范大人便老了，张菊轩指望升转他一步儿，照旧也罢了！还亏他些。」说毕，茶汤两换，荆都监起身，因问：「云大人到几时请俺每吃酒？」西门庆道：「近节这两日也是请不成，直到月间罢了。」送至大门，上马而去。西门庆这里宰了一口鲜猪，两坛浙江酒，一疋大红绒金豸员领，一疋黑青妆花纻丝员领，一百菓馅金饼，谢宋御史，就差春鸿拏帖儿，送到察院去。门吏入报进去。宋御史唤至后厅火房内，赏茶吃，等写了回帖，装于套内封了，又赏了春鸿三钱银子。来见西门庆，拆开观看，上写看：
 
-「两次造扰华府，悚愧殊甚！今又辱承厚贶，何以克当？外令亲荆子事，已具本矣，想已知悉。连日渴仰丰标，容当面悉。使旋谨谢
+    「两次造扰华府，悚愧殊甚！今又辱承厚贶，何以克当？外令亲荆子事，已具本矣，想已知悉。连日渴仰丰标，容当面悉。使旋谨谢
 
-（下书）侍生宋乔年拜大锦衣西门先生大人门下。」
+    （下书）侍生宋乔年拜大锦衣西门先生大人门下。」
 
 宋御史随即差人送了一百本历日，四万布，一口猪来回礼。一日上司行下文书来，吴大舅本衙到任管事。西门庆拜去，就与吴大舅三十两银子，四疋京段，交他上下使用，到二十四日稍闲，封了印来家，又备羊酒，花红轴文，邀请亲朋，从卫中上任回来，迎接到家，摆大酒席，与他作贺。又是何千户东京家眷到了，西门庆写月娘名字，送茶过去。到二十六日，玉皇庙吴道官十二个道众，在家与李瓶儿念百日经，十回度人，整做法事，大吹大打，倡道行香。各亲朋都来送茶，请吃斋供，至晚方散；俱不言表。至廿七日，西门庆打发各家礼毕，又是应伯爵、谢希大、常时节、傅伙计、甘伙计、韩道国、贲地传、崔本，每家半口猪，半腔羊，一坛酒，一包米，一两银子；院中李桂姐、吴银儿、郑爱月儿每人一套杭州绢衣服，三两银子。吴月娘又与庵里薛姑子打斋，令来安儿送香油 米面银钱去，不在言表。看看到年除之日，窗梅痕月，檐雪滚风，竹爆千门万户。家家帖春胜，处处挂桃符。西门庆烧纸，又到于李瓶儿房灵前。祭奠已毕，置酒于后堂。合家大小月娘等，李娇儿、孟玉楼、潘金莲、孙雪娥、西门大姐并女婿陈经济，都递了酒，两旁列坐。先是春梅、迎春、玉筲、兰香、如意儿五个磕头，然后小玉、绣春、小鸾儿、元宵儿、中秋儿、秋菊磕头。其次者来昭妻一丈青惠庆、来保妻惠祥、来兴妻惠秀、来爵妻惠元，一般儿四个家人媳妇磕头。然后纔是王经、春鸿、玳安、平安、来安，棋童儿、琴童儿、画童儿，来昭儿子铁棍儿，来保儿子僧宝儿，来兴女孩儿年儿来磕头。西门庆与吴月娘，俱有手帕汗巾银钱赏赐。到次日，重和元年新正月元旦，西门庆早起，冠冕穿大红，天地上炷了香，烧了纸，吃了点心，备马就出去拜巡按贺节去了。月娘与众妇人，早起来施朱付粉，插花插翠，锦裙绣袄，罗袜方鞋，妆点妖娆，打扮可喜，都来后边月娘房内，厮见行礼。那平安儿与该日节级，在门首接拜帖，落后门簿答应往来官长士夫。玳安与王经穿自新衣裳，新靴新帽，在门首踢毽子儿，放炮火章，又去磕瓜子儿，袖香桶儿，戴闹娥儿。众伙计主管，门下底人，伺候见节者不计其数，都是陈经济一人在前边客位管待。后边大厅摆设锦筵卓席，单管待亲朋。花园卷棚，放下毡帏暖帘，铺陈锦裀绣毯，兽炭火盆，放着十卓，都是销金卓帏，妆花柳甸，宝妆菓品，瓶插金花，筵开玳瑁，专一留待士大夫官长。
 
@@ -21,13 +18,11 @@
 
 老婆道：「奴娘家姓叶，排行五姐。」这西门庆口中喃喃吶吶，就叫：「叶五儿！不知道口里令｛入日｝不｛入日｝？」那老婆原来奶子出身，与贲四私通，被拐出来，占为妻子，五短身材，两个鸧鸧胎眼儿，今年也是属兔的，三十二岁了，甚么事儿不知道；口里如流水，连叫亲爷不绝，情浓一泄如注。西门庆扯出尘柄要抹，妇人拦住：「休抹，等淫妇下去，替你吮净了罢！」这西门庆满心欢喜。妇人真个蹲下身子，双手捧定那话，吮咂的干干净净。纔系上裤子，因问西门庆：「他怎的去恁些时不来？」西门庆道：「我这里也盼他哩，只怕京中夏大人留住他使。」又与了老婆二三两银子盘缠。因说：「我待与你一套衣服，恐贲四知道，不好意思，不如与你些银子儿，你自家治买罢。」开门送出来。玳安又闲在铺子里，掩门等候的西门庆进来，方纔关上拴，西门庆便往后边去了。看官听说：自古上梁不正，则下梁歪，此理之自然也。如人家主子行苟且之事，家中使的奴仆，皆效尤而行。原来贲四这个老婆，不是守本分的，先与玳安有奸，落后又把西门庆勾引上了。这玳安刚打发西门庆进去了，傅伙计又没在铺子里上宿，他与平安儿打了两大壶酒，就在贲四老婆屋里，吃到有二更时分。平安在铺子里歇了，他就和老婆在屋里睡了一宿，有这等的事！正是：
 
-「对人不用穿针线， 那得工夫送巧来？」
+    「对人不用穿针线， 那得工夫送巧来？」
 
 有诗为证，
 
-「满眼风流满眼迷， 残花何事滥如泥？
-
-拾琴暂息商陵操， 惹得山禽遶树啼。」
+    「满眼风流满眼迷， 残花何事滥如泥？拾琴暂息商陵操， 惹得山禽遶树啼。」
 
 都说贲四老婆晚夕对玳安说：「只怕隔壁韩嫂儿传嚷得后边知道，也似韩伙计娘子，一时被你娘们说上几句，羞人答答的，怎好相见？」玳安道：「如今家中除了俺大娘和五娘不言语，别的不打紧。俺大娘倒也罢了，只是五娘快出尖儿。你依我，节间买些甚么儿进去孝顺俺大娘；别的不稀罕，他平昔好吃蒸酥。你买一钱银子菓馅蒸酥，一盒好大壮瓜子送进去。这初九日是俺五娘生日，你再送些礼去，梯已再送一盒瓜子与俺五娘。你到明日进来磕头，管情就俺住许多口嘴。」贲四老婆真个依着玳安之言，第二日赶西门庆不在家，玳安就替他买了盒子掇进后边月娘房中。月娘便道：「是那里的？」玳安道：「是贲四嫂送这盒点心瓜子与娘吃。」月娘道：「男子汉又不在家，那讨个钱来，又交他费心！」连忙收了，又回出一盒馒头，一盒菓子与他，说：「多上覆，多谢了。」那日西门庆拜人回家早，有玉皇庙吴道官来拜，在厅上留坐吃酒。刚打发吴道官去了，西门庆脱了衣服，使玳安：「你骑了马，问声文嫂儿去。俺爷今日要来拜拜太太，看他怎的说？」玳安道：「爷且不消去。头里小的撞见文嫂儿骑着驴子，打门首过去了。他明日初四，王三官儿起身往东京与六黄公公磕头去了。太太说，交爷初六日过去见节，他那里伺候着哩。」西门庆便道：「他真个这等说来？」玳安道：「莫不小的敢说谎？」这西门庆就入后边去了。
 
@@ -37,25 +32,23 @@
 
 分付大官把马牵于后槽喂养。茶没罢，让西门庆宽衣内坐，说道：「小儿从初四日往东京与他叔父六黄太尉磕头去了，只过了示宵纔来。」这西门庆一面唤玳安脱去上盖，里边穿着白绫袄子，天青飞鱼氅衣，粉底皂靴，十分绰耀。妇人房内安放卓席。黄铜四方兽面火盆。生着炭火。朝阳房屋，日色照窗。房中十分明亮，须臾，丫鬟拿酒菜上来。杯盘罗列，肴馔堆盈，酒泛金波，茶烹玉蕊。妇人锦裙绣袄，皓齿明眸。玉手传杯，秋波送意，猜枚掷骰，笑语烘春。良久，意洽情浓。饮多时，目邪心荡。看看日落黄昏，又早高烧银烛。玳安、琴童下边耳房放卓儿，自有文嫂儿主张酒馔点心管待。三官儿娘子，另在那边角门内一所屋里居住，自有丫鬟养娘伏侍，等闲不过这边来。妇人又倒扣角门，僮仆谁敢擅入。酒酣之际，两个共入里间房内，掀开绣帐，关上窗户。丫鬟轻剔银釭，佳人忙掩朱户。男子则解衣就寝，妇人即洗脚上床。枕设宝花，被翻红浪，原来西门庆家中磨鎗备剑，带了淫器包儿来，安心要鏖战这婆娘，早把胡僧药用酒吃在腹中。那话上使着双托子，在被窝中，架起妇人两股，纵尘柄入牝中。举腰展力，那一阵掀腾鼓捣，其声犹若数尺竹泥淖中相似，连声响亮。妇人在下，没口叫达达如流水。正是：
 
-「照海旌幢秋色里， 击天鼙鼓月明中。」
+    「照海旌幢秋色里， 击天鼙鼓月明中。」
 
 有长词一篇，道这场交战。但见：
 
-「锦屏前迷魂阵摆，绣帏下摄魄旗开。迷魂阵上，闪出一员酒金刚，色魔王，头戴肉红盔，锦兜鍪，身穿乌油甲，锋红袍，缠觔绦，鱼皮带，没缝靴；使一柄黑缨鎗，带的是虎眼鞭，皮薄头流星槌，没〈毛秋〉箭；跨一疋掩毛凹眼浑红马，打一面发雨翻云大帅旗。摄魂旗下，拥一个粉骷髅，花狐狸，头戴双凤翘，珠络索，身穿素罗衫，翠裙腰，白练裆，凌波袜，鲛绡带，凤头鞋；使一条隔天边话絮刀，不得见，泪偷垂，容瘦减，粉面挝，罗帏傍；骑一疋百媚千娇玉面〈毛秋〉，打一柄倒凤颠鸾遮日伞。须臾，这阵上扑冬冬鼓震春雷，那阵上闹挨挨麝兰叆叇；这阵上腹溶溶被翻红浪，那阵土刷剌剌帐控银钩。被翻红浪精神健，帐控银钩情意乖。这一个急展展二十四解任徘徊，那一个忽剌剌一十八滚难挣扎；一个是惯使的红绵套索鸳鸯扣，一个是好耍的拐子流星鸡心搥。一个火忿忿桶子鎗，恨不的扎勾三千下；一个颤巍巍肉膀牌，巴不得塌勾五十回。这一个善贯甲披袍战，那一个能夺精吸髓华。一个战马，叭蹋蹋蹅番歌舞地；一个征人，软浓浓塞满密林崖。一个丑搊搜刚硬形骸，一个俊娇娆杏脸桃腮。一个施展他久战熬场法，一个卖弄他莺声燕语谐。一个鬬良久，汗浸浸钗横鬓乱；一个战多时，喘吁吁枕欹裀歪。顷刻间，只见这内裆县，乞炮打成堆，个个皆肿眉睡眼；雯时下则望那莎草场，被鎗扎倒底，人人肉绽皮开。」正是：
+    「锦屏前迷魂阵摆，绣帏下摄魄旗开。迷魂阵上，闪出一员酒金刚，色魔王，头戴肉红盔，锦兜鍪，身穿乌油甲，锋红袍，缠觔绦，鱼皮带，没缝靴；使一柄黑缨鎗，带的是虎眼鞭，皮薄头流星槌，没〈毛秋〉箭；跨一疋掩毛凹眼浑红马，打一面发雨翻云大帅旗。摄魂旗下，拥一个粉骷髅，花狐狸，头戴双凤翘，珠络索，身穿素罗衫，翠裙腰，白练裆，凌波袜，鲛绡带，凤头鞋；使一条隔天边话絮刀，不得见，泪偷垂，容瘦减，粉面挝，罗帏傍；骑一疋百媚千娇玉面〈毛秋〉，打一柄倒凤颠鸾遮日伞。须臾，这阵上扑冬冬鼓震春雷，那阵上闹挨挨麝兰叆叇；这阵上腹溶溶被翻红浪，那阵土刷剌剌帐控银钩。被翻红浪精神健，帐控银钩情意乖。这一个急展展二十四解任徘徊，那一个忽剌剌一十八滚难挣扎；一个是惯使的红绵套索鸳鸯扣，一个是好耍的拐子流星鸡心搥。一个火忿忿桶子鎗，恨不的扎勾三千下；一个颤巍巍肉膀牌，巴不得塌勾五十回。这一个善贯甲披袍战，那一个能夺精吸髓华。一个战马，叭蹋蹋蹅番歌舞地；一个征人，软浓浓塞满密林崖。一个丑搊搜刚硬形骸，一个俊娇娆杏脸桃腮。一个施展他久战熬场法，一个卖弄他莺声燕语谐。一个鬬良久，汗浸浸钗横鬓乱；一个战多时，喘吁吁枕欹裀歪。顷刻间，只见这内裆县，乞炮打成堆，个个皆肿眉睡眼；雯时下则望那莎草场，被鎗扎倒底，人人肉绽皮开。」
 
-「愁云拖上九重天， 一派败兵沿地滚；
+正是：
 
-几番鏖战贪淫妇， 不是今番这一遭。」
+    「愁云拖上九重天， 一派败兵沿地滚；几番鏖战贪淫妇， 不是今番这一遭。」
 
 当下西门庆就在这婆娘心口与阴户，烧了两炷香，许下明日家中摆酒，使人请他同三官儿娘子去看灯耍子。这妇人一段身心，已是被他拴缚定了。于是满口应承都去。这西门庆满心欢喜，起来与他留连痛饮，至二更时分，把马从后门牵出，作别方回家去。正是：
 
-「不愁明日尽， 自有暗香来。」
+    「不愁明日尽， 自有暗香来。」
 
 有诗为证：
 
-「尽日忠君倚画楼， 相逢不舍又频留；
-
-刘郎莫谓桃花老， 浪把轻红逐水流。」
+    「尽日忠君倚画楼， 相逢不舍又频留；刘郎莫谓桃花老， 浪把轻红逐水流。」
 
 都说西门庆到家，有平安迎门禀说：「今日有薛公公家差人送请帖儿，请爷早往门外皇庄看春，又是云二叔家差人送了五个帖儿，请五位娘吃节酒。帖儿都交进去了。」西门庆听了，没言语，进入后边月娘房来，只见孟玉楼、潘金莲都在房内坐的。月娘从何千户家赴了席来家，已摘了首饰花翠，止戴着䯼髻，撇着六根金簪子，勒着珠子箍儿。上着蓝绫袄，下着软黄绵紬裙子，坐着说话。西门庆进来，连忙道了万福。西门庆就在正面椅上坐下，问道：「你今日往那里，这咱纔来？」西门庆无得说：「我在应二哥家留坐，到这咱晚。」月娘便说起今日何千户家酒席上事：「原来何千户娘子还年小哩，今年纔十八岁！生的灯人儿也似一表人物，好标致！知今博古，透灵儿还强十分！见我去，恰似会了几遍，好不喜狎。嫁了何大人二年光景，房里倒使着四个丫头，两个养娘，两房家人媳妇。」
 
@@ -65,19 +58,15 @@
 
 伯爵又问：「今日那几会嫂子去？」西门庆：「大房下和第二、第三、第五的房下四人去，我在家且歇息两日儿罢。」正说着，只见玳安拏进盒儿来，说道：「何老爹家差人送请帖儿来，初九日请吃节酒。」西门庆道：「早是你看着，人家来请，你不去？」于是看盒儿内放着三个请书儿，一个宛红佥儿，写着：「大寅丈四泉翁老先生大人」，一个写「大都阃吴老先生大人」，一个写：「大乡望应老先生大人」：俱是「待生何永寿顿首拜。」玳安说：「他那里说不认的，教咱这里转送送儿罢。」伯爵一见，便说：「这个都怎么儿的？我还没送礼儿去与他，他来请我，怎好去？」西门庆道：「我这里替你封上分帕礼儿，你差应宝早送去就是了。」一面令王经：「你封二钱银子，一方手帕，写你应二爹名字，与你应二爹。」因说：「你把这请帖儿袖了去，省的我又教人送。」只把吴大舅的差来安儿送去了。须臾，王经封了帕礼，递与伯爵。伯爵打恭说道：「哥谢！容易是我后日早来会你，咱一同起身。」说毕，作辞去了。午间都表吴月娘等打扮停当，一顶大轿，三顶小轿，后面又带着来爵媳妇儿惠元收迭衣服，一顶小轿儿；四名排军喝道，琴童、春鸿、棋童、来安四个跟随，往云指挥家来吃酒。正是：
 
-「翠眉云鬓画中人， 袅娜宫腰迎出尘；
-
-天上嫦娥元有种， 娇羞酿出十分春。」
+    「翠眉云鬓画中人， 袅娜宫腰迎出尘；天上嫦娥元有种， 娇羞酿出十分春。」
 
 不说月娘与李娇儿、孟玉楼、潘金莲都往云离守家吃酒去了。西门庆分付大门上平安儿：「随问甚么人，只说我不在。有帖儿接了，就是了。」那平安径过一遭，那里再敢离了左右，只在门首坐的。但有人客来望，只回不在家。西门庆那日，只在李瓶山房中围炉坐的。自从李瓶儿没了，月娘教如意儿休勒上奶去，每日只喂奶来兴女孩儿城儿。连日西门庆害腿疼，猛然想起任医官与他延寿丹，用人乳吃。于是来到房中，教如意儿挤乳。那如意儿节间，头上戴着黄霜霜簪环，满头花翠，勒着翠蓝销金汗巾，蓝紬子袄儿，玉色云段披袄儿，黄绵紬裙子，脚下沙绿潞紬，白绫高底鞋儿，妆点打扮，比昔时不同。手上戴着四个乌银戒指儿，坐在旁边，打发吃了药，又与西门庆斟酒脯菜儿。迎春打发吃了饭，走过隔壁，和春梅下棋去了。要茶要水，自有绣春在厨下打发。西门庆见丫鬟都不在屋里，在炕上斜靠着背，扯开白绫吊的绒裤子，露出那话来，带着银托子，教他用口吮咂。一面傍边放着菓酌，斟酒自饮。因呼道：「章四儿，我的儿，你用心替达达咂，我到日日寻出件好妆花段子比甲儿来，你正月十二日穿。」老婆道：「看爹可怜见。」吮弄勾一顿饭时，西门庆道：「我儿，我心里要在你身上烧炷香儿。」老婆道：「随爹你拣着烧炷香儿。」西门庆令他关上房门，把裙子脱了，上炕来仰卧在枕上，底下穿着新做的大红潞紬裤儿，褪下一只裤腿来。西门庆袖内还有烧林氏剩下的三个烧酒浸的香马儿，撇去他抹胸儿，一个坐在他心口内，一个坐在他小肚儿底下，一个安在他〈毛皮〉盖子上，用安息香一齐点着。那话下边便插进牝中，低着头看着拽，只顾没棱露脑，送来送进不已，又取过镜台来，傍边照看。须臾，那香烧到肉根前，妇人蹙眉啮齿，忍其疼痛，口里颤声柔语，哼成一块，没口子叫：「达达爹爹，罢了我了，好难忍也！」西门庆更叫道：「章四儿淫妇，你是谁的老婆？」妇人道：「我是爹的老婆。」西门庆教与他：「你说是熊旺的老婆，今日属了我的亲达达了。」那妇人回应道：「淫妇原是熊旺的老婆，今日属了我的亲达达了！」西门庆又问道：「我会｛入日｝不会？」妇人道：「达达会｛入日｝〈毛皮〉。」两个淫声艳语，无般言语不说出来，西门庆那话粗大，撑的妇人牝户满满，彼往来出入，带的花心，红如鹦鹉舌，黑似蝙蝠翅一般，翻覆可爱。西门庆于是把他两股，板抱在怀内，四体交匝，两相迎凑，那话尽没至根，不容毫发。妇人瞪目失声、淫水流下。西门庆情浓乐极，精邈如涌泉。正是：
 
-「不知已透春消息， 但觉形骸骨节镕。」
+    「不知已透春消息， 但觉形骸骨节镕。」
 
 有诗为证：
 
-「任君随意荐霞杯， 满腔春事浩无涯；
-
-一身径藉东君爱， 不管未头坠宝钗。」
+    「任君随意荐霞杯， 满腔春事浩无涯；一身径藉东君爱， 不管未头坠宝钗。」
 
 当日西门庆烧了这老婆身上三处香，开门寻了一件玄色段子妆花比甲儿与他。至晚月娘众人来家，对西门庆说：「原来云二嫂也怀着个大身子。俺两个今日酒席上都递了酒，说过到明日两家若分娩了，若是一男一女，两家结亲做亲家；若都是男子，同堂攻书；若是女儿，拜做姐妹，一处做针指，来往同亲戚儿耍子。应二嫂做保证。」西门庆听了话笑，言休饶舌。到第二日，都是潘金莲上寿。西门庆早起往衙门中去了。分付小厮每抬出灯来，收拾揩抹干净，大厅卷棚各处挂灯，摆设锦帐围屏，叫来兴买下鲜菓，叫了小优，晚夕上寿的东西。这潘金莲早辰打扮出来，花妆粉抹，翠袖朱唇；走来大厅上，看见玳安与琴童站着高凳，在那里挂灯，那三大盏珠子吊挂灯。笑嘻嘻说道：「我道是谁在这里，原来是你每在这里挂灯哩。」琴童道：「今日是五娘上寿，爹分付下俺每挂了灯，明日娘的生日好摆酒，晚夕小的每与娘磕头，娘已定赏俺每哩。」妇人道：「要打便有，要赏可没有！」琴童道：「爷嚛！娘怎的没打不说话，行动只把打放在头里？小的每是娘的儿女，娘看顾看顾儿更好，如何只说打起来！」妇人道：「贼囚，别要说嘴！你与他好生仔细挂那灯，没的例儿撦儿的，拏不牢吊将下来。前日年里为崔本来，说你爹大白日里不见了，险不险，赦了一顿打，没曾打。这槽儿可打成了！」
 
@@ -97,7 +86,7 @@
 
 若遇着买花儿东西，明公正义问他要，不恁瞒并藏背掖的；教人看小了他，他怎么张着嘴儿说人！他本没钱，姥姥怪他，就亏了他了。莫不我护他？也要个公道！」如意儿道：「错怪了五娘。自古亲儿骨肉，五娘有钱，不孝顺姥姥，再与谁？常言道：『要打看娘面，千朵桃花一树儿生。』到明日你老人家黄金入柜，五娘他也没个贴皮贴肉的亲戚，就如死了俺娘样儿！」婆子道：「我有今年没明年，知道今死明日死？我也不怪他。」春梅见婆子吃了两锺酒，韶刀上来了。便叫迎春：「二姐你拏骰盆儿来，咱每个掷个骰儿抢红耍子儿罢。」不一时，取了四十个骰儿的骰盆儿来。春梅先与如意与掷，掷了一回，又与迎春掷，都是赌大钟子。你一盏，我一锺，须臾竹叶穿心，桃花上脸，把一锡瓶酒吃的罄净。迎春又拏上半镡麻姑酒 来，也都吃了。约莫到二更时分，那潘姥姥老人家，熬不的，又早前靠后仰打起盹来，方纔散了。春梅便归这边来。推了推角门，开着；进入院内，只见秋菊正在明间板壁缝儿内，倚着春凳儿，听他两个在屋里行房，怎的作声唤，口中呼叫甚么。正听的热闹，不防春梅走来到根前，向他腮颊上，尽力打了个耳刮子，骂道：「贼小死的囚奴，你平白在这里听甚么！」打的秋菊睁睁的说道：「我在这里打盹，谁听甚么来？你就来打我！」不想房内妇人听见，便问春梅：「他和谁说话？」春梅道：「没有人。我使他关门，他不动。」于是替他摭过了。秋菊揉着眼，关上房门。春梅走到炕上，摘头睡了，不在话下。正是：
 
-「鹧鹧有意留残景， 杜宇无情恋晚辉。」
+    「鹧鹧有意留残景， 杜宇无情恋晚辉。」
 
 一宿晚景题过。次日，潘金莲生日，有傅伙计、某伙计、贲四娘子、崔本媳妇、段大姐、吴舜臣媳妇、郑三姐、吴二妗子都在这里。西门庆约会吴大舅、应伯爵，整衣冠，尊瞻视，骑马喝道，往何千户家赴席。那日也有许多官客，四个唱的，一起杂耍；周守御同席。饮酒至晚回家，就在前边和如意儿歇了。到初十日，发帖儿请众官娘子吃酒。月娘便向西门庆说：「趁着十二日看灯酒，把门外他孟大姨和俺大姐，也带着请来坐坐，省的教他知道恼，请人不请他。」西门庆道：「早是你说。」分付陈经济：「再写两个帖，差琴童儿请去。」这潘金莲在旁听着多心，走到屋里，一面撺掇把潘姥姥就要起身。月娘道：「姥姥，你慌去怎的？再消住一日儿是的。」金莲道：「姐姐，大正月里，他家里丢着孩子没人看，教他去罢。」慌的月娘装了两个盒子点心菜食，又与了他一钱轿子钱，管待打发去了。因对着李娇儿说：「他明日请他有钱的大姨儿来看灯吃酒，一个老行货子，观眉观眼的，不打发去了，平白教他在屋里做甚么？待要说是客人，没好衣服穿；待要说是烧火的妈妈子，又不似。倒没的教我惹气！」
 
@@ -111,20 +100,18 @@
 
 正是：
 
-「比花花解语， 比玉玉生香！」
+    「比花花解语， 比玉玉生香！」
 
 这西门庆不见则已，一见魂飞天外，魄丧九霄。未曾体交，精魄先失。少顷，月娘等迎接，进入后堂相见。叙礼已毕，请西门庆拜见。西门庆得不还一声，连忙整衣冠行礼，恍若琼林玉树临凡，神女巫山降下。躬身施礼，心摇目荡，不能禁止。拜见毕，下来。先在卷棚内放卓儿摆茶，极尽希奇美馔。然后大厅上坐陈水陆珍羞，正面设石崇锦帐围屏，四下铺玳筵广席。花灯高挑，彩绳半拽。雕梁锦带低垂，画烛齐明宝盖。鱼龙山戏，恍一片珠玑；殿阁楼台，簇千团翡翠。左边厢，九姊十妹美人图画丹青；右首下，九曜八洞神仙妆成金碧。吃的是龙肝凤髓 ，熊掌驼峰 。歌的锦瑟银筝，凤筲象管。龟鼓冬冬惊过鸟，砍喉啭啭遏行云。席上娇娆，尽是珠围翠绕；阶下脚色，皆按离合悲欢。正是：
 
-「得多少进酒了鬟双落浦， 献羔侍妾两嫦娥。」
+    「得多少进酒了鬟双落浦， 献羔侍妾两嫦娥。」
 
 当下林太太上席，戏文扮的是小天香半夜朝元记。唱了两折下来，李桂姐、吴银儿、郑月儿、洪四儿四个唱的上去弹唱。吴大姨门外，先起身去了。唱灯词锦绣花灯半空挑。西门庆在卷棚内，自有吴大舅、应伯爵、谢希大、常时节，李铭、吴惠、郑春三个小优儿弹唱饮酒。不住下来大厅格子外，往里观觑。这各家跟轿子家人伴当，自有酒馔，前厅管待，不必用说。次第明月圆，容易彩云散；乐极悲生，否极泰来，自然之理。西门庆但知争名夺利，纵意奢淫。殊不知天道恶盈，鬼录来追，死限临头。到晚夕，堂中点起灯来，小优儿弹唱灯词。还未到起更时分，西门庆正陪着人坐的，就在席上齁齁的打起睡来。伯爵便行令猜枚，鬼混他，说道：「哥，你今日没高兴，怎的只打睡？」西门庆道：「我昨日没曾睡，不知怎的，今日只是没精神打睡。」只见四个唱的下来。伯爵教两个唱灯词，两个递了酒。当下洪四儿与郑月儿两个弹着筝琵琶唱，吴银儿与李桂姐递酒。正要在热闹处，忽玳安来报：「林太太与何老爹娘子起身了。」这西门庆席下来，黑影里走到二门里首，偷看着他上轿。月娘众人送出来，前边天井内看放烟火。蓝氏穿着大红遍地金貂鼠皮袄，翠蓝遍地金裙。林太太是白绫袄儿，貂鼠披袄，大红裙，带着金铎玉佩。家人打着灯笼，簇拥上轿而去。这西门庆正是饿眼将穿，馋涎空咽，恨不能就要成双。见蓝氏去了，悄悄从夹道进来。当时没巧不成语，姻缘会凑，可霎作怪！不想来爵儿媳妇见堂客散了，正从后边归来开他房门。不想顶头撞见西门庆，没处藏躲。原来西门庆见媳妇子生的乔样，安心已久。虽然不及来旺妻宋氏风流，也颇克得过第二。于是乘着酒兴儿，双关接进他房中亲嘴。这老婆当初在王皇亲家，因是养个主子，被家人不忿攘闹，打发出来。今日又撞着这个道路，如何不从。一面就递舌头在西门庆口中。两个解衣褪裤，就按在炕沿子上，掇起腿来，被西门庆就耸了个不亦乐乎。正是：
 
-「未曾得遇莺娘面， 且把红娘去解馋。」
+    「未曾得遇莺娘面， 且把红娘去解馋。」
 
 有诗为证：
 
-「灯月交光浸玉壶， 分得清光照绿珠；
-
-莫道使君终有妇， 教人桑下觅罗敷。」
+    「灯月交光浸玉壶， 分得清光照绿珠；莫道使君终有妇， 教人桑下觅罗敷。」
 
 毕竟未知后来何如，且听下回分解：
