--- a/the-golden-lotus/068.md
+++ b/the-golden-lotus/068.md
@@ -1,5 +1,5 @@
 第六十八回：郑月儿卖俏透密意 玳安殷懃寻文嫂（万历本）
-=
+========================================================
 
 话说西门庆与李瓶儿烧布毕，归潘金莲房中歇了一夜。到次日，先是应伯爵家送喜面来，落后黄四领他小舅子孙文相宰了一口猪，一坛酒，两只烧鹅，四只烧鸡，两盒菓子，来与西门庆磕头。西门庆再三不受，黄四打旋磨儿跪着说：「蒙老爹活命之恩，救出孙文相来，举家感激不浅。今无甚孝顺，些微薄礼，与老爹赏人罢了，如何不受？」推阻了半日，西门庆止受猪酒：「留下送你钱老爹，也是一样。」黄四道：「既是如此，难为小人一点穷心，无处所尽，只得把羹菓抬回去。又请问老爹，几时闲暇？小人问了应二叔，里边请老爹坐坐。」西门庆道：「你休听他哄你哩，又费烦你，不如不了。」那黄四和他小舅子，千恩万谢出门。这里西门庆赏拾盒钱，打发去讫。到十一月初一日，西门庆往衙门中回来，又往李知县衙内吃酒去。月娘独自一人，素妆打扮，坐轿子往乔大户家，与长姐做生日，都不在家。到后晌，有庵里薛姑子，听见月娘许下他到初五日李瓶儿断七，教他请八众尼僧来家念经，拜血盆忏。
 
@@ -7,9 +7,7 @@
 
 西门庆如此这般：「我不受他的，再三磕头礼拜，我只受了猪、酒、添了两疋白鹇纻丝、两疋京段、五十两银子，谢了钱龙野先生。」伯爵道：「哥，你不接钱尽勾了，这个是你落得的。少说四疋尺头值三十两银子，那二十两那里寻这分上去？便益了他，救了他父子二人性命！」当日坐至晚夕散。西门庆向伯爵说：「你明日还到这边。」伯爵说：「我知道。」作别去了。八众尼僧，直乱到一更天时分，方纔道场圆满，焚烧箱库散了。至次日，西门庆早往衙门中去了。且说王姑子打听得知，大清早辰，走来西门庆家，说薛姑子揽了经去，要经钱。月娘怪他：「你怎的昨日不来？他说你往王皇亲家做生日去了。」王姑子道：「这个就是薛家老淫妇的鬼。他对着我说，咱家挪了日子，到初六念经。经钱他多拿的去了，一些儿不留下。」月娘道：「这咱里未曾念经，经钱写法，都找完了与他了。早是我还与你留下一疋衬钱布在此。」教小玉连忙摆了些昨日剩下的斋食，与他吃了。把与他一疋蓝布。这王子姑口里喃喃吶吶骂道：「我教这老淫妇独吃，他印造经，转了六娘许多银子。原说这个经儿咱两个使，你又独自掉揽的去了。」月娘道：「老薛说你接了六娘血盆经五两银子，你怎的不替他念？」王姑子道：「他老人家五七时，我在家请了四个师父，念了半个月哩。」月娘道：「你念了，怎的挂口儿不对我题？你就对我说，我还送些衬施儿与你。」那王姑子便一声儿不言语，讪讪的坐了一回，往薛姑子嚷去了。看官听说：似这样缁流之辈，最不该招惹他。脸虽是尼姑脸，心同淫妇心。只是他六根未净，本性欠明，戒行全无，廉耻已丧。假以慈悲为主，一味利欲是贪。不管堕业轮回，一味眼下快乐。哄了些小门闺怨女，念了些大户动情妻。前门接施主檀那，后门丢胎卵湿化。姻缘成好事，到此会佳期。有诗为证：
 
-「佛会僧尼是一家， 法轮常转度龙华，
-
-此物只好图生育， 枉使金刀剪落花。」
+    「佛会僧尼是一家， 法轮常转度龙华，此物只好图生育， 枉使金刀剪落花。」
 
 却说西门庆从衙门中回来，吃了饭，应伯爵又早到了，盔的新段帽，沉香色〈衤旋〉褶，粉底皂靴，向西门庆声喏，说：「这天也有晌午，咱也好去了。他那里使人邀了好几遍了，休要难为人家。」西门庆道：「咱今邀葵轩走走。」使王经：「往对过请你温师父来。」王经去不多时，回说：「温师父不在家，望朋友去了。画童儿请去了。」伯爵便说：「咱等不的，他秀才家，赤道有要没紧望朋友，多咱来？倒没的误了勾当。」西门庆分付琴童：「备黄马与应二爹骑。」伯爵道：「我不骑。你依我，省的摇铃打鼓。我先走一步儿，你坐轿子慢慢来就是了。」西门庆道：「你说的是，你先行罢。」那伯爵举手先走了。西门庆分付玳安、琴童、四个排军，收拾下暖轿跟随。纔待出门，忽平安儿慌慌张张从外拿着双帖儿来报说：「工部安老爹来拜。先差了个吏送帖儿，后边走着便来也。」慌的西门庆分付家中厨下备饭，使来兴儿买攒盘点心伺候。良久，安郎中来，跟从许多人。西门庆冠冕出来迎接。安郎中穿着妆花云鹭补子员领，起花萌金带。进门拜毕，分宾主坐定，左右拿茶上来。茶罢，叙其间阔之情。西门庆道：「老先生荣擢，失贺，心甚缺然。前日蒙赐华扎厚仪，生正值丧事匆匆，未及奉候起居为歉。」安郎中道：「学生有失吊问，罪罪。生到京也曾道达云峯，未知可有礼到否？」西门庆道：「正是，又承翟亲家远劳致赙。」安郎中道：「四泉已定今岁，恭喜在即。」西门庆道：「在下才微任小。岂敢过于非望？」又说：「老先生此今荣擢美差，足展雄才大略。河治之功，天下所仰。」安郎中道：「蒙四泉过誉。一介寒儒，叨承科甲，处在下僚。若非蔡老先生抬举，备员冬曹，谬典水利，奔走湖湘之间，一年以来，王事匆匆，不暇安迹。今又承命修理河道，况此民穷财尽之时。前者皇船载运花石，毁闸折坝，所过倒悬，公私困弊之极。而今瓜州、南旺、沽头、鱼台、徐、沛、吕梁、安陵、济宁、宿迁、临清、新河一带，皆毁坏废，北南河南陡，淤沙无水。八府之民，皆疲弊之甚。又兼贼盗梗阻，财用匮乏，大覃神输鬼没之才，亦无如之何矣！」
 
@@ -23,35 +21,32 @@
 
 饮酒说话之间，吴银儿又问：「家中大娘、众娘每多好？」西门庆道：「都好。」吴银儿道：「爹乍没了娘，到房里孤孤儿的，心中也想？」西门庆道：「想是不消说。前日在书房中，白日梦见他，哭的我要不的。」吴银儿道：「热突突没了，可知想哩。」伯爵道：「你每说的只情说，把俺每这里只顾旱着。不说来递锺酒，也唱个儿与俺听。俺每起身去罢。」慌的李三、黄四连忙撺掇他姐儿两个上来递酒，安下乐器，吴银儿也上来。三个粉头一般儿坐在席傍，躧着火盆，合着声音，启朱唇，露皓齿，词出佳人口，唱了套中吕粉蝶儿三弄梅花，端的有裂石流云之响。唱毕，西门庆向伯爵说：「你落索他姐儿三个唱，你也下来酬他一杯儿。」伯爵道：「不打紧，死不了人。等我打发他仰靠着，直舒着，侧卧着，金鸡独立，随我受用。又一件，野马踩场，野狐抽丝，猿猴献菓，黄狗溺尿，仙人指路，靠背将军，柱夜对木，伴哥随他拣着要。」爱香道：「我不好骂出来的，汗邪了你这贼花子，胡说乱道的！」这应伯爵用酒碟安三个锺儿，说：「我儿，你们在我手里吃两锺；不吃，望身上只一泼。」爱香道：「我今日忌酒。」爱月儿道：「你跪着月姨儿，教我打个嘴巴儿，我纔吃。」伯爵道：「银姐，你怎的说？」吴银儿道：「二爹，我今日心内不自在，吃半盏儿罢。」那爱月儿道：「花子，你不跪，我一百年也不吃。」黄四道：「二爷，你不跪，显的不是趣人；也罢，跪着不打罢。」爱月儿道：「不，他只教我打两个嘴巴儿，我方吃这锺酒儿。」伯爵道：「温老先儿这里看着，怪小淫妇儿，只顾赶尽杀绝！」于是奈何不过，真个直撅儿跪在地下。那爱月儿轻揎彩袖，款露春纤，骂道：「贼花子，再敢无礼伤犯月姨？再不敢；高声儿答应，你不答应，我也不吃。」那伯爵无法可处，只得应声道：「再不敢伤犯月姨了。」这爱月儿一连打了两个嘴巴，方纔吃那杯酒。伯爵起来道：「好个没仁义的小淫妇儿，你也剩一口儿我吃。把一锺酒都吃的净净儿的！」爱月儿道：「你跪下，等我赏你一锺酒。」于是满满斟上一杯，笑望伯爵口里只一灌，伯爵道：「怪小淫妇儿，使促挟灌撒了我一身酒。我老道只这件衣服，新穿了纔头一日儿，就污浊了我的。我问你家汉子要！」乱了一回，各归席上坐定。看看天色，掌烛上来。下饭添换，都已上完。下边玳安、琴童、画童、应宝都在鸨子房里放卓儿，有汤饭点心酒肴管待。须臾，拿上各样菓碟儿来，那伯爵推让温秀才，只顾不住手拈放在口里，一壁又往袖中褪。西门庆分付拿个骰盆儿来，先让温秀才。秀才道：「岂有此理？还从老先儿那边来。」于是西门庆与吴银儿，用十二个骰儿抢红。下边四个妓女，拿乐器弹唱叫呀，酒饮过一巡。吴银儿却转过来与温秀才、伯爵抢红。爱香儿却来西门庆席上递酒猜枚，须臾过去。爱月儿近前与西门庆抢红。吴银儿都往下席递李三、黄四。原来爱月儿旋往房中新妆打扮出来，上着烟里火〈廴回〉纹锦对衿袄儿，鹅黄杭绢点翠缕金裙，妆花膝裤，大红凤嘴鞋儿。灯下海獭卧兔儿，越显的粉浓浓雪白的脸儿，犹赛美人儿一般。但见：
 
-「芳姿丽质更妖娆， 秋水精神瑞雪标，
-
-凤目半弯藏琥珀， 朱唇一伙点樱桃；
-
-露来玉笋纤纤细， 行步金莲步步娇，
-
-白玉生香花解语， 千金良夜实难消。」
+    「芳姿丽质更妖娆， 秋水精神瑞雪标，
+    凤目半弯藏琥珀， 朱唇一伙点樱桃；
+    露来玉笋纤纤细， 行步金莲步步娇，
+    白玉生香花解语， 千金良夜实难消。」
 
 这西门庆一见，如何不爱？吃了几锺酒，半酣上来。因想着李瓶儿梦中之言：「少贪在外夜饮。」一面起身，后边净手。慌的鸨子连忙叫丫鬟点灯，引到后边解手出来。爱月随即也跟来伺候，盆中净手毕，拉着他手儿同到房中。房中又早月窗半启，银烛高烧，气暖如春，兰麝馥郁。床畔则斗帐云横，鲛绡雾设。于是脱了上盖，底下白绫道袍，两个在床上，腿压腿儿做一处。先是爱月儿问：「爹，今日不家去罢了。」西门庆道：「我还去。今日一者银儿在这里，不好意思；二者我居着官，今年考察在迩，恐惹是非，只是白日来和你坐坐罢了。」又说：「前日多谢你泡螺儿，你送了去，倒惹的我心酸了半日。当初有世六娘他会拣；他死了，家中再有谁会拣他！」爱月道：「拣他不难，只是要拿的着禁节儿便好。那日我胡乱整治了不多儿，知道爹好吃，教郑春送来。那瓜仁都是我口里一个个儿磕的，汗巾儿是我闲着用工夫撮的穗子。瓜仁子，说应花子倒挝了好些吃了。」西门庆道：「你问那讪脸花子头，我见他早时两把挝去，喃了好些，只剩下不多些我吃了。」爱月儿道：「倒便益了贼花子，恰好只孝顺了他。」又说：「多谢爹的衣梅，妈看见吃了一个儿，喜欢的要不的。他要便痰火发了，晚夕咳嗽，半夜把人聒死了。常时口干，得恁一个在口内噙着，他倒生好些津液。我和俺姐姐吃了没多几个儿，连罐儿他老人家都收了在房内，早晚吃，谁敢动他？」西门庆道：「不打紧，我明日使小厮再送一罐来你吃。」又问：「爹连日会桂姐来没有？」西门庆道：「自从孝堂里到如今，谁见他来？」爱月儿道：「六娘五七，他也送茶去来？」西门庆道：「他家使李铭送去来。」爱月道：「我有句儿，只放在爹心里。」西门庆问：「甚么话？」那爱月又想了想，说：「我不说罢。若说了，显得姊妹们恰似我背地说他一般，不好意思的。」西门庆一面搂着他脖子，说：「怪小油嘴儿，甚么话？说与我，不显出你来就是了。」两个正说得入港，猛然应伯爵走入来，大叫一声：「你两个好人儿，撇了俺每，走在这里说梯己话儿。」
 
 爱月儿道：「哕！好个不得人意，怪讪脸花子。猛可走来，諕了人恁一跳！」西门庆骂道：「怪狗才，前边去罢，丢的葵轩和银姐在那里，都往后头来了。」这伯爵一屁股坐在床上，说：「你拿肐膊来，我且咬口儿我纔去。你两个在这里尽着｛入日｝捣。」于是不由分说，向爱月儿袖口边，勒出那赛鹅脂雪白的手腕儿来，带着银镯子，犹若美玉，尖溜溜十指春葱手。上笼着金戒指儿，夸道：「我儿，你这两只手儿，天生下就是发｛髟巳｝｛髟己｝的肥一般。」爱月儿道：「怪刀攘的，我不好骂出来的！」被伯爵拉过来，咬了一口，走了。咬的老婆怪叫，骂：「怪花子，平白进来鬼混人死了！」便叫：「桃花儿，你看他出去了，把笼道子门关一面关上门。」爱月便把李桂姐如今又和王三官儿子女一节，说与西门庆：「怎的有孙寡嘴、祝麻子、小张闲，架儿于宽、孙锡钺，踢行头白回子、沙三，日逐嫖着在他家行走。如今丢开齐香儿，又和王家玉芝儿打热。两下里使钱使没了包了皮祅，当了三十两银子，拿着他娘子儿一副金镯子，放在李桂姐家，算了一个月歇钱。」西门庆听了，口中骂道：「恁小淫妇儿，我分付和这小厮缠，他不听，还对着我赌身发呪，恰好只哄我。」爱月儿道：「爹也别要恼。我说与爹个门路儿，管情教王官打了嘴，替爹出气。」西门庆把他搂在怀里，用白绫袖子兜着他粉项，搵着他香腮，他便一手拿着铜丝火笼儿，内烧着沉速香饼儿，将袖口笼着熏热身上，便道：「我说与爹，休教一人知道。就是应花子也休望他题，只怕走了风。」西门庆问：「我的儿，你告我说，我傻了，肯教人知道。端的甚门路儿？」郑爱月悉把：「王三官娘林太太，今年不上四十岁，生的好不乔样，描眉画眼，打扮狐狸也似。他儿子镇日在院里，他专在家只送外卖，假托在个姑姑庵儿打斋。但去就他说媒的文嫂儿家落脚。文嫂儿单管与他做牵儿，只说好风月。我说与爹，到明日遇他遇儿也不难。又一个巧宗儿，王三官儿娘子儿，今纔十九岁，是东京六黄太尉侄女儿，上画般标致，双陆棋子都会，三官常不在家，他如同守寡一般，好不气生气死。为他也上了两三遭吊，救下来了。爹难得先刮刺上了他娘，不愁媳妇儿不是你的。」当下被他一席话，说的西门庆心邪意乱，搂着粉头说：「我的亲亲，我又问你怎的晓的就里？」这爱月儿就不说常在他家唱，只说我一个熟人儿，如此这般和他娘在其处会过一遍，也是文嫂儿说合。西门庆问：「那人是谁？莫不是大街坊张大户侄儿张二官儿？」爱月儿道：「那张懋德儿好｛入日｝的货！麻着七八个脸弹子，密缝两个眼，可不砢碜杀我罢了！只好樊家百家奴儿接他，一向董金儿也与他丁八了。」西门庆道：「我猜不着，端的是谁？」爱月儿道：「教爹得知了罢。是原梳笼我的那个南人。他一年来此做买卖两遭。正经他在里边歇不的一两夜，倒只在外边常和人家偷猫递狗，干此勾当。」这西门庆听了，见粉头所事，合着他的板眼，亦发欢喜，说：「我儿，你既贴恋我心，每日我送三十两银子与你妈盘缠，也不消接人了，我遇闲就来。」爱月儿道：「爹，你有我心时，甚么三十两二十两，两日间掠几两银好与妈，我自恁懒待留人，只是伺候爹罢了。」西门庆道：「甚么话！我决然送三十两银子来。」说毕，两个上床交欢，床上铺的被褥约一尺高，爱月道：「爹脱衣裳不脱？」西门庆道：「咱连衣耍耍罢，只怕他们前边等咱。」一面扯过夏枕来，粉头解去下衣，仰卧枕畔，里面穿着红潞紬底衣，褪下一只膝裤腿来。西门庆把他两只小小金莲扛在肩头上，解开前蓝绫裤子，那话使上托子，但见花心轻折，柳腰款摆。正是：
 
-「花嫩不禁揉，春风卒未休。花心犹未足，脉脉情无那。低低唤粉郎，春宵乐未央。」
+    「花嫩不禁揉，春风卒未休。花心犹未足，脉脉情无那。低低唤粉郎，春宵乐未央。」
 
 那当下两个至精欲泄之际，西门庆干的气喘吁吁，粉头娇声不绝，鬓云拖枕，满口只教道：「亲达达，慢着些儿。」良久，乐极情浓，一泄如注。云收雨散，各整衣裙，于灯下照镜理容。西门庆在床前盆中净手，着上衣服，两个携手来到席上。吴银儿便守着，对爱香儿挨近，葵轩正掷色猜枚，觥筹交错，要在热闹处。众人见西门庆进入，多立起身来让坐。伯爵道：「你也一般的把俺每去在这里，你纔出来。拿酒儿，且扶扶头着。」西门庆道：「俺每说句话儿，有甚这闲勾当？」伯爵道：「好话，你两个原来说梯己话儿！」当下伯爵拿大锺斟上暖酒，众人陪西门庆吃，四个妓女拿乐器弹唱。玳安在傍掩口说道：「轿子来了。」西门庆弩了个嘴儿与他，那玳安连忙分付排军打起灯笼，外边伺候。这西门庆也不坐，陪众人执杯立饮。分付四个妓女：「你再唱个一见娇羞我听。」那韩愁消儿：「俺每会唱。」于是拿起琵琶来，款放娇声，拿腔唱道：
 
-「一见娇羞，雨意云情，我见他千娇百媚，万种妖娆，一捻温柔。通书先把话儿勾，传情暗里秋波溜。记在心头，心头未审，向时成就？」
+    「一见娇羞，雨意云情，我见他千娇百媚，万种妖娆，一捻温柔。通书先把话儿勾，传情暗里秋波溜。记在心头，心头未审，向时成就？」
 
 唱了一个词儿，吴银儿递西门庆酒。郑香儿便递伯爵。爱儿奉温秀才。李智、黄四都斟上。又唱道：
 
-「过尔丫鬟，欲铸黄金拜将坛。莫通明晓寄与书生，云雨巫山。重门今夜未曾拴，深闺特把情郎盼夜静更阑，更阑！偷花妙手今番难按。」
+    「过尔丫鬟，欲铸黄金拜将坛。莫通明晓寄与书生，云雨巫山。重门今夜未曾拴，深闺特把情郎盼夜静更阑，更阑！偷花妙手今番难按。」
 
 吃毕，西门庆令再斟上，郑香儿上来递西门庆，吴银儿递温秀才，爱月儿递伯爵。郑春在傍捧着菓菜儿。又唱道：
 
-「梦入高堂，相会风流窈窕娘。我与他同携素手，共入罗帏，永结鸾凤。灵犀一点透膏肓，鲛绡帐底翻红浪。粉汗凝香，凝香！今宵一刻，人间天上。」
+    「梦入高堂，相会风流窈窕娘。我与他同携素手，共入罗帏，永结鸾凤。灵犀一点透膏肓，鲛绡帐底翻红浪。粉汗凝香，凝香！今宵一刻，人间天上。」
 
 唱毕又叫呀酒。爱月儿却转过捧西门庆酒，吴银儿递温秀才，并李三、黄四，从新斟酒。又唱第四个：
 
-「春暖芙蓉，鬓乱钗横宝髻松。我为他香娇玉软，燕侣莺俦，意美情浓。腰肢无力眼蒙胧，深情自把眉儿纵。两意相同，相同！百年恩爱，和偕鸾凤。」
+    「春暖芙蓉，鬓乱钗横宝髻松。我为他香娇玉软，燕侣莺俦，意美情浓。腰肢无力眼蒙胧，深情自把眉儿纵。两意相同，相同！百年恩爱，和偕鸾凤。」
 
 唱毕，都饮过，西门庆起身。一面令玳安向书袋内取出大小十一包赏赐来。四个妓女，每人三钱，叫上厨役赏了五钱。吴惠、郑奉、郑春，每人三钱，撺掇打茶的，每人二钱。丫头桃花儿，也与了他三钱。俱磕头谢了。黄四再三不肯放，道：「应二叔，你老人家说声，天还早哩。老爹大坐坐，也尽小人之情。如何就要起身？我的月姨儿，你也留留儿！」爱月儿道：「我留他，他白不肯坐。」西门庆道：「你每不知，我明日还有事。」一面向黄四、李三作揖，道：「生受打搅。黄四道：「惶恐！没的请老爹来受饿。又不肯久坐，还是小人没敬心。」说着，三个唱的都磕头，说道：「爹到家，多顶上大娘和众娘们，俺每闲了，会了银姐，往宅内看看大娘去。」西门庆道：「你每闲了，去坐上一日来。」一面掌起灯笼，西门庆下台基，郑家鸨子迎着道万福，说道：「老爹，大坐回儿，慌的就起身，嫌俺家东西不美口？还有一道米饭儿未曾上哩。」西门庆道：「勾了。我不是还坐回儿，许多事在身上。明日还要起早，衙门中有勾当。教应二哥他没事，教他大坐回儿罢。」那伯爵就要跟着起来，被黄四死力拦住，说道：「我的二爷，你若去了，就没趣死了。」伯爵道：「不是，你休拦我。你把温老先生有本事留下，我就算你好汉！」那温秀才夺门就走，被黄家小厮来定儿拦腰抱住。西门庆到了大门首，因问琴童儿：「温师父有头口在这里没有？」
 
@@ -63,12 +58,10 @@
 
 子骑了去。到那里等我打发他钱就是了。」文嫂儿道：「这等还好说。」一面教文〈纟堂〉将驴子备了，带上眼纱，骑上。玳安与他同行，径往西门庆宅中来。正是：
 
-「欲向深闺永艳质， 全凭红叶是良媒。」
+    「欲向深闺永艳质， 全凭红叶是良媒。」
 
 有诗为证：
 
-「谁信桃源有路通， 桃花含露笑春风，
-
-桃源只在山溪里， 今许渔郎去问津。」
+    「谁信桃源有路通， 桃花含露笑春风，桃源只在山溪里， 今许渔郎去问津。」
 
 毕竟未知后来如何，且听下回分解：
