--- a/the-golden-lotus/100.md
+++ b/the-golden-lotus/100.md
@@ -1,5 +1,5 @@
 第一百回：韩爱姐湖州寻父 普静师荐拔群冤（万历本）
-=
+============================================
 
 格言
 
@@ -14,7 +14,9 @@
     国不知有。金戈抑日酬战征，麒麟图画功为首！雁门关外秋风烈，铁衣披张卧寒月。汗马卒勤二十年
     ，赢得班班鬓如雪！天子明见万里余，几番劳绩来旌书。肘悬金印大如斗。无负堂堂七尺躯！」
 
-有日，周仁押家眷车辆到于东昌。统制见了春梅，孙二娘、金哥、玉姐，众丫鬟家小都到了，一路平安，心中大喜。就在统制府衙后厅居住。周仁悉把东庄上叫了二爷周宣来宅，同小的老子周忠，看守宅舍。周统制又问：「怎的李安不见？」春梅道：「又题甚李安那厮！我因他捉获了张胜，好意赏了他两件衣服，与他娘穿。他到晚夕巡风，进入后厅，把他二爷东庄上收的籽籽银一包五十两，放在明间桌上，偷的去了。几番使伴当叫他，只是推病不来。落后又使叫去，他躲的上青州原藉家去了。」统制便道：「这厮我倒看他，原来这等无恩！等我慢慢差人拏他去。」这春梅不题起韩爱姐之事。过了几日，春梅见统制日遂理论军情，干朝庭国务，焦心劳思，日中尚未暇食。至于房帏色欲之事，久不沾身。因见老家人周忠次子周义，年十九岁，生的眉清目秀，眉来眼去，两个暗地私通，就抅搭了。朝朝暮暮，两个在房中下棋饮酒，只瞒过统制一人不知。一日，不想北国大金皇帝灭了辽国，又见东京钦宗皇帝登基，集大势番兵，分两路寇乱中原。大元帅粘没喝，领十万人马，出山西太原府井陉道，来抢东京；副元帅斡离不，由檀州来抢高阳关。边兵抵挡不住，慌了兵部尚书李纲，大将种师道，星夜火牌羽书，分调山东、山西、河南、河北、关东、陕西，分六路统制人马，各依要地防守截杀。那时陕西刘延庆领延绥之兵，关东王禀领汾绛之兵，河北王焕领魏博之兵，河南辛兴宗领彰卫之兵，山西杨惟忠领泽潞之兵，山东周义领青兖之兵。却说周统制见大势番兵来抢边界，兵部羽书大牌星火来，连忙整率人马，全装披挂，兼道进兵。比及哨马到高阳关上，金国斡离不由人马，已抢进关来，杀死人马无数。正值五月初旬，交阵堵截，黄沙四起，大风迷目。统制提兵进赶，不防被活立兜马反攻，没秋一箭，正射中咽喉，堕马而死。众番将就用钩索搭去。被这边将士向前，仅抢尸首，马载而还。所伤军兵无数。可怜周统制，一旦阵亡！亡年四十七岁。正是：
+有日，周仁押家眷车辆到于东昌。统制见了春梅，孙二娘、金哥、玉姐，众丫鬟家小都到了，一路平安，心中大喜。就在统制府衙后厅居住。周仁悉把东庄上叫了二爷周宣来宅，同小的老子周忠，看守宅舍。周统制又问：「怎的李安不见？」春梅道：「又题甚李安那厮！我因他捉获了张胜，好意赏了他两件衣服，与他娘穿。他到晚夕巡风，进入后厅，把他二爷东庄上收的籽籽银一包五十两，放在明间桌上，偷的去了。几番使伴当叫他，只是推病不来。落后又使叫去，他躲的上青州原藉家去了。」统制便道：「这厮我倒看他，原来这等无恩！等我慢慢差人拏他去。」这春梅不题起韩爱姐之事。
+
+过了几日，春梅见统制日遂理论军情，干朝庭国务，焦心劳思，日中尚未暇食。至于房帏色欲之事，久不沾身。因见老家人周忠次子周义，年十九岁，生的眉清目秀，眉来眼去，两个暗地私通，就抅搭了。朝朝暮暮，两个在房中下棋饮酒，只瞒过统制一人不知。一日，不想北国大金皇帝灭了辽国，又见东京钦宗皇帝登基，集大势番兵，分两路寇乱中原。大元帅粘没喝，领十万人马，出山西太原府井陉道，来抢东京；副元帅斡离不，由檀州来抢高阳关。边兵抵挡不住，慌了兵部尚书李纲，大将种师道，星夜火牌羽书，分调山东、山西、河南、河北、关东、陕西，分六路统制人马，各依要地防守截杀。那时陕西刘延庆领延绥之兵，关东王禀领汾绛之兵，河北王焕领魏博之兵，河南辛兴宗领彰卫之兵，山西杨惟忠领泽潞之兵，山东周义领青兖之兵。却说周统制见大势番兵来抢边界，兵部羽书大牌星火来，连忙整率人马，全装披挂，兼道进兵。比及哨马到高阳关上，金国斡离不由人马，已抢进关来，杀死人马无数。正值五月初旬，交阵堵截，黄沙四起，大风迷目。统制提兵进赶，不防被活立兜马反攻，没秋一箭，正射中咽喉，堕马而死。众番将就用钩索搭去。被这边将士向前，仅抢尸首，马载而还。所伤军兵无数。可怜周统制，一旦阵亡！亡年四十七岁。正是：
 
     「于家为国忠良将， 不辨贤愚血染沙！」
 
@@ -62,7 +64,9 @@
     「乱愁依旧销翠举， 为甚年来瞧悴容；
     离别终朝魂耿耿， 碧霄无路得相逢。」
 
-姊妹两个吟诗已毕，不觉潸然泪下。二爷周宣走来劝道：「你姊妹两个，少要烦恼，须索解叹省过罢。我连日做得梦，有些不吉。梦见一张弓，挂在旗竿上；旗竿折了，不知是凶是吉！」韩爱姐道：「倒只怕老爷边上有些说话！」正在犹疑之间，忽见家人周仁挂着一身孝，荒荒张张走来报道：「祸事！老爷如此这般，五月初七日在边关上阵亡了！大奶奶、二奶奶家眷载着灵车，都来了。」慌了二爷周宣，收拾打扫前厅干净，停放灵柩，摆下祭祀，合家大小哀号起来。一面做斋累七，僧道念经。金哥、玉姐披麻带孝，吊客往来，择日出殡，安葬于祖茔，俱不必细说。却说二爷周宣，引着六岁金哥儿，行文书申奏朝廷，讨祭葬，袭替祖职。朝廷各降：「兵部覆题引奏，已故统制周秀，奋身报国，没于王事。忠勇可加！遣官谕祭一坛，墓顶追封都督之职。伊子照例优养，出幼袭替祖职。」这春梅在内颐养之余，淫情愈盛。常留周义在香阁中，镇日不出。朝来暮往，淫欲无度，生出骨蒸痨病症。逐日吃药，减了饮食，消了精神，体瘦如柴，而贪淫不巳，一日过了他生辰，到六月伏暑天气，早辰晏起。不料他搂着周义在床上，一泄之后，鼻口皆出凉气，淫津流下一洼口，就呜呼哀哉，死在周义身上。亡年二十九岁。这周义见没了气儿，就慌了手脚。向箱内盗了些金银细软，带在身边，逃走在外。丫鬟、养娘不敢隐匿，报与二爷周宣得知。把老家人周忠锁了，押着抓寻周义。可霎作怪！正走在城外他姑娘家投住。一条索子，拴将来。巳知其情，恐扬出丑去，金哥久后不好袭职。拏到前厅，不由分说，打了四十大棍，实时打死。把金哥与孙二娘看养，一面发丧于祖茔，与统制合葬毕。房中两个养娘并海棠、月桂，都打发各寻投向嫁人去了。止有葛翠屏与韩爱姐，再三劝他，不肯前去。一日，不想大金人马，抢了东京、汴梁。太上皇帝与靖康皇帝，都被虏上北地去了。中原无主，四下荒乱。兵戈匝地，人民逃窜。黎庶有涂炭之哭，百姓有倒悬之苦。大势番兵，已杀到山东地界。民间夫逃妻散，鬼哭神号，父子不相顾。葛翠屏巳被他娘家领去，各逃生命。止丢下韩爱姐无处依倚，不免收拾行装，穿着随身惨淡衣衫，出离了清河县前，往临清找寻他父母。到临清谢家店，店也关闭，主人也走了。不想撞见陈三儿，三儿说：「你父母去年时，就跟了何官人往江南湖州去了。」这韩爱姐一路上怀抱月琴，唱小词曲，往前抓寻到湖州何官人家，寻着父母。随路饥食渴饮，夜住晓行。忙忙如丧家之犬，急急似漏网之鱼，弓鞋又小，万苦千辛。行了数日，来到徐州地方。天色晚来，投在孤村里面。一个婆婆，年记七旬之上，头绾两道雪鬓，挽一窝丝，正在灶上杵米造饭。这韩爱姐便向前道了万福，告道：「奴家是清河县人氏，因为荒乱，前往江南投亲。不期天晚，权借婆婆这里投宿一宵，明早就行，房金不少。」那婆婆只顾观看这女子，不是贫难人家婢女，生的举止典雅，容貌非俗。但见：
+姊妹两个吟诗已毕，不觉潸然泪下。二爷周宣走来劝道：「你姊妹两个，少要烦恼，须索解叹省过罢。我连日做得梦，有些不吉。梦见一张弓，挂在旗竿上；旗竿折了，不知是凶是吉！」韩爱姐道：「倒只怕老爷边上有些说话！」正在犹疑之间，忽见家人周仁挂着一身孝，荒荒张张走来报道：「祸事！老爷如此这般，五月初七日在边关上阵亡了！大奶奶、二奶奶家眷载着灵车，都来了。」慌了二爷周宣，收拾打扫前厅干净，停放灵柩，摆下祭祀，合家大小哀号起来。一面做斋累七，僧道念经。金哥、玉姐披麻带孝，吊客往来，择日出殡，安葬于祖茔，俱不必细说。却说二爷周宣，引着六岁金哥儿，行文书申奏朝廷，讨祭葬，袭替祖职。朝廷各降：「兵部覆题引奏，已故统制周秀，奋身报国，没于王事。忠勇可加！遣官谕祭一坛，墓顶追封都督之职。伊子照例优养，出幼袭替祖职。」这春梅在内颐养之余，淫情愈盛。常留周义在香阁中，镇日不出。朝来暮往，淫欲无度，生出骨蒸痨病症。逐日吃药，减了饮食，消了精神，体瘦如柴，而贪淫不巳，一日过了他生辰，到六月伏暑天气，早辰晏起。不料他搂着周义在床上，一泄之后，鼻口皆出凉气，淫津流下一洼口，就呜呼哀哉，死在周义身上。亡年二十九岁。这周义见没了气儿，就慌了手脚。向箱内盗了些金银细软，带在身边，逃走在外。丫鬟、养娘不敢隐匿，报与二爷周宣得知。把老家人周忠锁了，押着抓寻周义。可霎作怪！正走在城外他姑娘家投住。一条索子，拴将来。巳知其情，恐扬出丑去，金哥久后不好袭职。拏到前厅，不由分说，打了四十大棍，实时打死。把金哥与孙二娘看养，一面发丧于祖茔，与统制合葬毕。房中两个养娘并海棠、月桂，都打发各寻投向嫁人去了。止有葛翠屏与韩爱姐，再三劝他，不肯前去。
+
+一日，不想大金人马，抢了东京、汴梁。太上皇帝与靖康皇帝，都被虏上北地去了。中原无主，四下荒乱。兵戈匝地，人民逃窜。黎庶有涂炭之哭，百姓有倒悬之苦。大势番兵，已杀到山东地界。民间夫逃妻散，鬼哭神号，父子不相顾。葛翠屏巳被他娘家领去，各逃生命。止丢下韩爱姐无处依倚，不免收拾行装，穿着随身惨淡衣衫，出离了清河县前，往临清找寻他父母。到临清谢家店，店也关闭，主人也走了。不想撞见陈三儿，三儿说：「你父母去年时，就跟了何官人往江南湖州去了。」这韩爱姐一路上怀抱月琴，唱小词曲，往前抓寻到湖州何官人家，寻着父母。随路饥食渴饮，夜住晓行。忙忙如丧家之犬，急急似漏网之鱼，弓鞋又小，万苦千辛。行了数日，来到徐州地方。天色晚来，投在孤村里面。一个婆婆，年记七旬之上，头绾两道雪鬓，挽一窝丝，正在灶上杵米造饭。这韩爱姐便向前道了万福，告道：「奴家是清河县人氏，因为荒乱，前往江南投亲。不期天晚，权借婆婆这里投宿一宵，明早就行，房金不少。」那婆婆只顾观看这女子，不是贫难人家婢女，生的举止典雅，容貌非俗。但见：
 
     「乌云不整，惟思昔日家豪。眉敛远山，为忆当年富贵。此夜月朦云雾琐，牡丹花被土沉埋。」
 
@@ -82,20 +86,25 @@
 
 到于空野十字路口，只见一个和尚，身披紫褐袈裟，手执九环锡杖，脚靸芒鞋，肩上背着条布袋，袋内裹着经典，大移步迎将来，与月娘打了个问讯，高声大叫道：「吴氏娘子，你看往那里去？还与我徒弟来！」諕月娘大惊失色，说道：「师父，你问我讨甚么徒弟？」那和尚又道：「娘子，你休推睡里梦里，你曾记的十年前在岱岳东峰，被殷天锡赶到我山洞中投宿？我就是那雪洞老和尚，法名普静。你许下我徒弟，如何不与我？」吴二舅便道：「师父出家人，如何你不近道？此是荒乱年程，乱窜逃生。他有此孩儿，久后还要接代香火。他肯舍与你出家去？」和尚道：「你真个不与我去？」吴二舅道：「师父你休闲说，误了人去路儿！后面只怕番兵来到，朝不保暮。」和尚道：「你既不与我徒弟，如今天色已晚，也走不出路去。番人且来不到此处，你且跟我到这寺中歇一夜，明早去罢。」吴月娘问：「师父，是那寺中？」那和尚用手只一指儿，「那路旁便是。」和尚引着，不想来到永福寺。吴月娘认的是永福寺，曾走过一遍。比及来到寺中，长老僧众，都走去大半。止有几个禅和尚，在后边禅堂中打坐。佛前点着一大盏琉璃海灯，烧着一炉香。此时日色衔山时分。但见：
 
-    「十字街，荧煌灯火；九曜庙，香霭锺声。一轮明月挂青天，几点疏星明碧落。六军官内，呜呜画角
-    频吹；五鼓楼头，点点铜壸正滴。四边宿雾。纷纷罩舞榭歌台；三巿沉烟，隐隐闭绿窗朱户。两两佳
-    人归绣阁。双双士子掩书帏。」
+    「十字街，荧煌灯火；九曜庙，香霭锺声。
+    一轮明月挂青天，几点疏星明碧落。
+    六军官内，呜呜画角频吹；五鼓楼头，点点铜壸正滴。
+    四边宿雾。纷纷罩舞榭歌台；三巿沉烟，隐隐闭绿窗朱户。
+    两两佳人归绣阁。双双士子掩书帏。」
 
 当晚吴月娘与吴二舅、玳安、小玉、孝哥儿，男女五口儿，投宿在寺中方丈内。小和尚有认的，安排了些饭食，与月娘等吃了。那普静老师，跏跌在禅堂床上，敲木鱼，口中念经。月娘与孝哥儿、小玉在床上睡，吴二舅和玳安做一处；着了慌乱，辛苦了底人，都睡着了。止有小玉，不曾睡熟，起来在方丈内，打门缝内看那普静老师父念经。看看念至三更时，只见金风凄凄，斜月朦朦，人烟寂静，万籁无声。觑那佛前海灯，半明不暗。这普静老师，见天下荒乱，人民遭劫，阵亡横死者数极多。发慈悲心，施广惠力，礼白佛言世尊解冤经咒，荐拔幽魂，解释宿冤，绝去挂碍，各去超生，再无留滞。
 
 于是诵念了百十遍解冤经咒。少顷，阴风凄凄，冷气飕飕。有数十辈焦头烂额，蓬头泥面者，或断手折臂者，或有刳腹剜心者，或有无头跛足者，或有吊颈枷锁者，都来悟领禅师经咒，列于两旁。禅师便道：「你等众生，冤冤相报，不肯解脱，何日是了？汝当谛听吾言，随方托化去罢！」偈曰：
 
-    「劝尔莫结冤， 冤深难解结。 一日结成冤，
-    千日解一彻！ 若将冤报冤， 如汤去泼雪。
-    若将冤报冤， 如狼重见蝎！ 我见结冤人，
-    尽被冤磨折。 我见此忏晦， 各把性悟彻。
-    照见本来心， 冤愆自然雪。 仗此经力深，
-    荐拔诸恶业。 汝当各托生， 再勿将冤结！」
+    「劝尔莫结冤，冤深难解结。
+    一日结成冤，千日解一彻！
+    若将冤报冤，如汤去泼雪。
+    若将冤报冤，如狼重见蝎！
+    我见结冤人，尽被冤磨折。
+    我见此忏晦，各把性悟彻。
+    照见本来心，冤愆自然雪。
+    仗此经力深，荐拔诸恶业。
+    汝当各托生，再勿将冤结！」
     
     「改头换面轮回去， 来世机缘莫再攀！」
 
