--- a/the-golden-lotus/000.md
+++ b/the-golden-lotus/000.md
@@ -1,21 +1,12 @@
 preface
 =======
 
+文本來源：維基文庫
 
-创建脚注格式类似这样 [^1]。
+校對參考：《新刻金瓶梅詞話》（明万历四十五年刊本）、《金瓶梅詞話》（夢梅館校本）[^1]
 
-[^_^]:
-
-
-
-
-
-
-[ref]开始注解
-
-
-[^1]: 我是菜鸟
-
+[ref] 我是菜鸟
 
 --------------------------------
 [ref]:https://oxnz.github.io
+[^1]: https://www.broadread.com/fiction/jinpingmei
