--- a/the-golden-lotus/000.md
+++ b/the-golden-lotus/000.md
@@ -5,8 +5,6 @@ preface
 
 校對參考：《新刻金瓶梅詞話》（明万历四十五年刊本）、《金瓶梅詞話》（夢梅館校本）[^1]
 
-[ref] 我是菜鸟
+[the-golden-lotus](https://github.com/oxnz/rebel/the-golden-lotus)
 
---------------------------------
-[ref]:https://oxnz.github.io
 [^1]: https://www.broadread.com/fiction/jinpingmei
